// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Create Secret Manager Wizard should be able to render first step form 1`] = `
<div>
  <div
    class="StepWizard--main wizardNav StepWizard--navBar"
  >
    <div
      class="StepWizard--navBarList"
    >
      <span
        class="StepWizard--header"
      >
        <span
          class="bp3-icon StyledProps--main"
          data-icon="azure-key-vault"
        >
          <svg
            height="37"
            viewBox="0 0 18 18"
            width="37"
            xmlns="http://www.w3.org/2000/svg"
          >
            <defs>
              <radialgradient
                cx="9"
                cy="9"
                gradientUnits="userSpaceOnUse"
                id="azure-key-vault_svg__a"
                r="8.5"
              >
                <stop
                  offset="0.18"
                  stop-color="#5ea0ef"
                />
                <stop
                  offset="0.56"
                  stop-color="#5c9fee"
                />
                <stop
                  offset="0.69"
                  stop-color="#559ced"
                />
                <stop
                  offset="0.78"
                  stop-color="#4a97e9"
                />
                <stop
                  offset="0.86"
                  stop-color="#3990e4"
                />
                <stop
                  offset="0.93"
                  stop-color="#2387de"
                />
                <stop
                  offset="0.99"
                  stop-color="#087bd6"
                />
                <stop
                  offset="1"
                  stop-color="#0078d4"
                />
              </radialgradient>
              <radialgradient
                cx="38.95"
                cy="182.07"
                gradientTransform="matrix(.94 0 0 .94 -28.71 -163.24)"
                gradientUnits="userSpaceOnUse"
                id="azure-key-vault_svg__b"
                r="9.88"
              >
                <stop
                  offset="0.27"
                  stop-color="#ffd70f"
                />
                <stop
                  offset="0.49"
                  stop-color="#ffcb12"
                />
                <stop
                  offset="0.88"
                  stop-color="#feac19"
                />
                <stop
                  offset="1"
                  stop-color="#fea11b"
                />
              </radialgradient>
            </defs>
            <path
              d="M9 .5A8.5 8.5 0 1017.5 9 8.51 8.51 0 009 .5zm0 15.84A7.34 7.34 0 1116.34 9 7.34 7.34 0 019 16.34z"
              fill="url(#azure-key-vault_svg__a)"
            />
            <circle
              cx="9"
              cy="9"
              fill="#fff"
              r="7.34"
            />
            <path
              d="M13.44 7.33a1.84 1.84 0 000-2.59l-3.15-3.16a1.83 1.83 0 00-2.58 0L4.56 4.74a1.84 1.84 0 000 2.59L7.18 10a.51.51 0 01.15.36v4.88a.63.63 0 00.18.44l1.2 1.2a.41.41 0 00.58 0l1.16-1.16.68-.68a.25.25 0 000-.34l-.49-.49a.27.27 0 010-.37l.49-.49a.25.25 0 000-.34l-.49-.49a.27.27 0 010-.37l.49-.49a.25.25 0 000-.34l-.68-.69v-.25zM9 2.35a1 1 0 010 2.07 1 1 0 110-2.07z"
              fill="url(#azure-key-vault_svg__b)"
            />
            <path
              d="M8.18 15.3a.23.23 0 00.38-.17v-4a.24.24 0 00-.11-.2.22.22 0 00-.34.2v4a.28.28 0 00.07.17z"
              fill="#ff9300"
              opacity="0.75"
            />
            <rect
              fill="#ff9300"
              height="0.61"
              opacity="0.75"
              rx="0.28"
              width="5.17"
              x="6.48"
              y="5.79"
            />
            <rect
              fill="#ff9300"
              height="0.61"
              opacity="0.75"
              rx="0.28"
              width="5.17"
              x="6.48"
              y="6.78"
            />
          </svg>
        </span>
      </span>
      <span
        class="StepWizard--title StepWizard--header"
      >
        connectors.title.azureKeyVault
      </span>
      <div
        class="StepWizard--navStep StepWizard--activeStep"
      >
        <span
          class="StepWizard--number"
        >
          1
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          overview
        </p>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          
        </p>
      </div>
      <div
        class="StepWizard--navStep"
      >
        <span
          class="StepWizard--number"
        >
          2
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          details
        </p>
      </div>
      <div
        class="StepWizard--navStep"
      >
        <span
          class="StepWizard--number"
        >
          3
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          connectors.stepThreeName
        </p>
      </div>
    </div>
    <div
      class="StepWizard--stepDetails"
    >
       
      <div
        class="Layout--vertical Layout--layout-spacing-xxlarge StyledProps--main firstep"
      >
        <div
          class="heading"
        >
          overview
        </div>
        <div
          class="StyledProps--font StyledProps--main connectorForm StyledProps--padding-small"
        >
          <div
            class="OverlaySpinner--overlaySpinner"
          >
            <form
              class="FormikForm--main"
            >
              <div>
                <div
                  class="StyledProps--font StyledProps--main"
                  style="min-height: 460px;"
                >
                  <div
                    class="StyledProps--font StyledProps--main main formElm"
                  >
                    <div
                      class="InputWithIdentifier--txtNameContainer TextInput--main"
                    >
                      <div
                        class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
                      >
                        <p
                          class="StyledProps--font StyledProps--main"
                        >
                          ID
                          :
                        </p>
                        <span
                          class="bp3-popover-wrapper"
                        >
                          <span
                            class="bp3-popover-target"
                          >
                            <div
                              class="bp3-editable-text bp3-editable-text-placeholder InputWithIdentifier--idValue"
                              tabindex="0"
                            >
                              <span
                                class="bp3-editable-text-content"
                                style="height: 1px; line-height: 1px; min-width: 0;"
                              />
                            </div>
                          </span>
                        </span>
                        <span
                          class="bp3-icon bp3-icon-edit StyledProps--main"
                          icon="edit"
                          style="vertical-align: middle; cursor: pointer;"
                        >
                          <svg
                            data-icon="edit"
                            height="12"
                            viewBox="0 0 16 16"
                            width="12"
                          >
                            <desc>
                              edit
                            </desc>
                            <path
                              d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </div>
                      <div
                        class="bp3-form-group"
                        data-id="name-0"
                      >
                        <label
                          class="bp3-label"
                          for="name"
                        >
                          <span
                            class="Tooltip--acenter"
                            data-tooltip-id="connectorDetailsStepForm_name"
                          >
                            name
                          </span>
                           
                          <span
                            class="bp3-text-muted"
                          />
                        </label>
                        <div
                          class="bp3-form-content"
                        >
                          <div
                            class="bp3-input-group"
                          >
                            <input
                              autocomplete="off"
                              class="bp3-input"
                              name="name"
                              placeholder="common.namePlaceholder"
                              type="text"
                              value=""
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="StyledProps--font StyledProps--main"
                    >
                      <label
                        class="Label--main"
                        style="font-size: 13px; font-weight: normal;"
                      >
                        optionalField
                        <span
                          class="bp3-icon bp3-icon-edit StyledProps--main editOpen StyledProps--color StyledProps--color-grey500"
                          data-name="edit"
                          data-testid="description-edit"
                          icon="edit"
                        >
                          <svg
                            data-icon="edit"
                            height="12"
                            viewBox="0 0 16 16"
                            width="12"
                          >
                            <desc>
                              edit
                            </desc>
                            <path
                              d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </label>
                    </div>
                    <div
                      class="StyledProps--font StyledProps--main"
                    >
                      <label
                        class="Label--main"
                        style="font-size: 13px; font-weight: normal;"
                      >
                        optionalField
                        <span
                          class="bp3-icon bp3-icon-edit StyledProps--main editOpen StyledProps--color StyledProps--color-grey500"
                          data-name="edit"
                          data-testid="tags-edit"
                          icon="edit"
                        >
                          <svg
                            data-icon="edit"
                            height="12"
                            viewBox="0 0 16 16"
                            width="12"
                          >
                            <desc>
                              edit
                            </desc>
                            <path
                              d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </label>
                    </div>
                  </div>
                </div>
                <div
                  class="Layout--horizontal StyledProps--main"
                >
                  <button
                    class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color"
                    type="submit"
                  >
                    <span
                      class="bp3-button-text"
                    >
                      <span>
                        continue
                      </span>
                    </span>
                    <span
                      class="bp3-icon bp3-icon-chevron-right StyledProps--main"
                      icon="chevron-right"
                    >
                      <svg
                        data-icon="chevron-right"
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <desc>
                          chevron-right
                        </desc>
                        <path
                          d="M10.71 7.29l-4-4a1.003 1.003 0 00-1.42 1.42L8.59 8 5.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                </div>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Create Secret Manager Wizard should be able to render first step form 2`] = `
<div>
  <div
    class="StepWizard--main wizardNav StepWizard--navBar"
  >
    <div
      class="StepWizard--navBarList"
    >
      <span
        class="StepWizard--header"
      >
        <span
          class="bp3-icon StyledProps--main"
          data-icon="azure-key-vault"
        >
          <svg
            height="37"
            viewBox="0 0 18 18"
            width="37"
            xmlns="http://www.w3.org/2000/svg"
          >
            <defs>
              <radialgradient
                cx="9"
                cy="9"
                gradientUnits="userSpaceOnUse"
                id="azure-key-vault_svg__a"
                r="8.5"
              >
                <stop
                  offset="0.18"
                  stop-color="#5ea0ef"
                />
                <stop
                  offset="0.56"
                  stop-color="#5c9fee"
                />
                <stop
                  offset="0.69"
                  stop-color="#559ced"
                />
                <stop
                  offset="0.78"
                  stop-color="#4a97e9"
                />
                <stop
                  offset="0.86"
                  stop-color="#3990e4"
                />
                <stop
                  offset="0.93"
                  stop-color="#2387de"
                />
                <stop
                  offset="0.99"
                  stop-color="#087bd6"
                />
                <stop
                  offset="1"
                  stop-color="#0078d4"
                />
              </radialgradient>
              <radialgradient
                cx="38.95"
                cy="182.07"
                gradientTransform="matrix(.94 0 0 .94 -28.71 -163.24)"
                gradientUnits="userSpaceOnUse"
                id="azure-key-vault_svg__b"
                r="9.88"
              >
                <stop
                  offset="0.27"
                  stop-color="#ffd70f"
                />
                <stop
                  offset="0.49"
                  stop-color="#ffcb12"
                />
                <stop
                  offset="0.88"
                  stop-color="#feac19"
                />
                <stop
                  offset="1"
                  stop-color="#fea11b"
                />
              </radialgradient>
            </defs>
            <path
              d="M9 .5A8.5 8.5 0 1017.5 9 8.51 8.51 0 009 .5zm0 15.84A7.34 7.34 0 1116.34 9 7.34 7.34 0 019 16.34z"
              fill="url(#azure-key-vault_svg__a)"
            />
            <circle
              cx="9"
              cy="9"
              fill="#fff"
              r="7.34"
            />
            <path
              d="M13.44 7.33a1.84 1.84 0 000-2.59l-3.15-3.16a1.83 1.83 0 00-2.58 0L4.56 4.74a1.84 1.84 0 000 2.59L7.18 10a.51.51 0 01.15.36v4.88a.63.63 0 00.18.44l1.2 1.2a.41.41 0 00.58 0l1.16-1.16.68-.68a.25.25 0 000-.34l-.49-.49a.27.27 0 010-.37l.49-.49a.25.25 0 000-.34l-.49-.49a.27.27 0 010-.37l.49-.49a.25.25 0 000-.34l-.68-.69v-.25zM9 2.35a1 1 0 010 2.07 1 1 0 110-2.07z"
              fill="url(#azure-key-vault_svg__b)"
            />
            <path
              d="M8.18 15.3a.23.23 0 00.38-.17v-4a.24.24 0 00-.11-.2.22.22 0 00-.34.2v4a.28.28 0 00.07.17z"
              fill="#ff9300"
              opacity="0.75"
            />
            <rect
              fill="#ff9300"
              height="0.61"
              opacity="0.75"
              rx="0.28"
              width="5.17"
              x="6.48"
              y="5.79"
            />
            <rect
              fill="#ff9300"
              height="0.61"
              opacity="0.75"
              rx="0.28"
              width="5.17"
              x="6.48"
              y="6.78"
            />
          </svg>
        </span>
      </span>
      <span
        class="StepWizard--title StepWizard--header"
      >
        connectors.title.azureKeyVault
      </span>
      <div
        class="StepWizard--navStep StepWizard--completedStep"
      >
        <span
          class="StepWizard--completedIcon"
        >
          <span
            class="bp3-icon bp3-icon-small-tick StyledProps--main StyledProps--color StyledProps--color-grey200"
            icon="small-tick"
          >
            <svg
              data-icon="small-tick"
              height="20"
              viewBox="0 0 20 20"
              width="20"
            >
              <desc>
                small-tick
              </desc>
              <path
                d="M15 5c-.28 0-.53.11-.71.29L8 11.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29s.53-.11.71-.29l7-7A1.003 1.003 0 0015 5z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          overview
        </p>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          
        </p>
      </div>
      <div
        class="StepWizard--navStep StepWizard--activeStep"
      >
        <span
          class="StepWizard--number"
        >
          2
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          details
        </p>
      </div>
      <div
        class="StepWizard--navStep"
      >
        <span
          class="StepWizard--number"
        >
          3
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          connectors.stepThreeName
        </p>
      </div>
    </div>
    <div
      class="StepWizard--stepDetails"
    >
       
      <div
        class="StyledProps--font StyledProps--main StyledProps--padding-top-medium"
        style="width: 64%;"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-size-medium StyledProps--padding-bottom-xlarge"
        >
          details
        </p>
        <div
          class="OverlaySpinner--overlaySpinner"
        >
          <form
            class="FormikForm--main"
          >
            <div>
              <div
                class="StyledProps--font StyledProps--main formHeight StyledProps--margin-top-medium StyledProps--margin-bottom-xxlarge"
              >
                <div
                  class="bp3-form-group"
                  data-id="clientId-0"
                >
                  <label
                    class="bp3-label"
                    for="clientId"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="azureKeyVaultForm_clientId"
                    >
                      common.clientId
                    </span>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-input-group"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        name="clientId"
                        type="text"
                        value="dummy clientId"
                      />
                    </div>
                  </div>
                </div>
                <div
                  class="bp3-form-group"
                  data-id="tenantId-1"
                >
                  <label
                    class="bp3-label"
                    for="tenantId"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="azureKeyVaultForm_tenantId"
                    >
                      connectors.azureKeyVault.labels.tenantId
                    </span>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-input-group"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        name="tenantId"
                        type="text"
                        value="dummy tenantId"
                      />
                    </div>
                  </div>
                </div>
                <div
                  class="bp3-form-group"
                  data-id="subscription-2"
                >
                  <label
                    class="bp3-label"
                    for="subscription"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="azureKeyVaultForm_subscription"
                    >
                      connectors.azureKeyVault.labels.subscription
                    </span>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-input-group"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        name="subscription"
                        type="text"
                        value="dummy subscription"
                      />
                    </div>
                  </div>
                </div>
                <div
                  class="bp3-form-group"
                  data-id="null-3"
                >
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="Layout--vertical StyledProps--main"
                    >
                      <label
                        class="bp3-label"
                      >
                        keyLabel
                      </label>
                      <div
                        class="StyledProps--font StyledProps--main container StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-space-between"
                      >
                        <a
                          class="containerLink"
                          data-testid="secretKey"
                          href="/account/dummy/resources/connectors"
                        >
                          <span
                            class="bp3-icon StyledProps--main"
                            data-icon="key-main"
                            style="height: 12px;"
                          >
                            <svg
                              height="24"
                              width="24"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <g
                                fill="none"
                                stroke="#1C1C28"
                                stroke-width="0.5"
                              >
                                <path
                                  d="M5.444 1A4.45 4.45 0 001 5.444c0 2.459 1.994 4.46 4.444 4.46 1.939 0 3.613-1.542 4.202-2.995a.393.393 0 01.23-.223.39.39 0 01.322.015l1.032.507.757-.72a.402.402 0 01.552-.007l.543.493.547-.556a.404.404 0 01.572-.005l.527.516.528-.53a.406.406 0 01.571-.002l.522.522.524-.523a.406.406 0 01.571 0l.522.522.523-.522a.414.414 0 01.315-.118.41.41 0 01.294.16l.277.369c.116-.153.234-.311.312-.396a.412.412 0 01.3-.134c.693 0 .927-.37.927-1.465 0-1.018-.636-1.381-1.23-1.381H9.638a.408.408 0 01-.35-.202A4.448 4.448 0 005.444 1h0z"
                                />
                                <path
                                  d="M3.828 3.99c.403 0 .769.163 1.034.428a1.458 1.458 0 010 2.067 1.458 1.458 0 01-2.067 0 1.458 1.458 0 010-2.067c.265-.265.63-.428 1.033-.428z"
                                />
                              </g>
                            </svg>
                          </span>
                          <p
                            class="StyledProps--font StyledProps--main containerLinkText StyledProps--color StyledProps--color-blue500 StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-flex-start StyledProps--flex-inline StyledProps--padding-small"
                          >
                            <div>
                              secret.configureSecret
                            </div>
                            <div>
                              &lt;mockSecret&gt;
                            </div>
                          </p>
                        </a>
                        <button
                          class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main containerEditBtn Button--with-current-color Button--without-shadow"
                          data-testid="secretKey-edit"
                          type="button"
                        >
                          <span
                            class="bp3-button-text"
                          >
                            <span
                              class="bp3-icon bp3-icon-edit StyledProps--main StyledProps--color StyledProps--color-blue500"
                              icon="edit"
                            >
                              <svg
                                data-icon="edit"
                                height="16"
                                viewBox="0 0 16 16"
                                width="16"
                              >
                                <desc>
                                  edit
                                </desc>
                                <path
                                  d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                                  fill-rule="evenodd"
                                />
                              </svg>
                            </span>
                          </span>
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-flex-start"
                >
                  <div
                    class="bp3-form-group bp3-disabled"
                    data-id="vaultName-4"
                  >
                    <label
                      class="bp3-label"
                      for="vaultName"
                    >
                      <span
                        class="Tooltip--acenter"
                        data-tooltip-id="azureKeyVaultForm_vaultName"
                      >
                        connectors.azureKeyVault.labels.vaultName
                      </span>
                       
                      <span
                        class="bp3-text-muted"
                      />
                    </label>
                    <div
                      class="bp3-form-content"
                    >
                      <div
                        class="bp3-popover-wrapper Select--main bp3-fill"
                      >
                        <div
                          class="bp3-popover-target"
                        >
                          <div
                            class="bp3-input-group bp3-disabled"
                          >
                            <input
                              autocomplete="off"
                              class="bp3-input"
                              disabled=""
                              name="vaultName"
                              placeholder="Search..."
                              style="padding-right: 0px;"
                              type="text"
                              value=""
                            />
                            <span
                              class="bp3-input-action"
                            >
                              <span
                                class="bp3-icon bp3-icon-caret-down StyledProps--main StyledProps--padding-small"
                                icon="caret-down"
                              >
                                <svg
                                  data-icon="caret-down"
                                  height="14"
                                  viewBox="0 0 16 16"
                                  width="14"
                                >
                                  <desc>
                                    caret-down
                                  </desc>
                                  <path
                                    d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                                    fill-rule="evenodd"
                                  />
                                </svg>
                              </span>
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <button
                    class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--margin-top-xsmall StyledProps--intent-primary Button--with-current-color"
                    type="button"
                  >
                    <span
                      class="bp3-button-text"
                    >
                      connectors.azureKeyVault.labels.fetchVault
                    </span>
                  </button>
                </div>
                <div
                  class="bp3-form-group"
                  data-id="default-5"
                >
                  <div
                    class="bp3-form-content"
                  >
                    <label
                      class="bp3-control bp3-checkbox StyledProps--font Checkbox--checkbox StyledProps--main StyledProps--padding-left-xxlarge StyledProps--inline"
                    >
                      <input
                        name="default"
                        type="checkbox"
                      />
                      <span
                        class="bp3-control-indicator"
                      />
                      <span
                        class="Tooltip--acenter FormikForm--checkBoxDocTooltipLabel"
                        data-tooltip-id="azureKeyVaultForm_default"
                      >
                        connectors.hashiCorpVault.defaultVault
                      </span>
                    </label>
                  </div>
                </div>
              </div>
              <div
                class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main"
              >
                <button
                  class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color"
                  type="button"
                >
                  <span
                    class="bp3-button-text"
                  >
                    back
                  </span>
                </button>
                <button
                  class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color"
                  type="submit"
                >
                  <span
                    class="bp3-button-text"
                  >
                    saveAndContinue
                  </span>
                  <span
                    class="bp3-icon bp3-icon-chevron-right StyledProps--main"
                    icon="chevron-right"
                  >
                    <svg
                      data-icon="chevron-right"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <desc>
                        chevron-right
                      </desc>
                      <path
                        d="M10.71 7.29l-4-4a1.003 1.003 0 00-1.42 1.42L8.59 8 5.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Create Secret Manager Wizard should be able to render first step form 3`] = `
<div>
  <div
    class="StepWizard--main wizardNav StepWizard--navBar"
  >
    <div
      class="StepWizard--navBarList"
    >
      <span
        class="StepWizard--header"
      >
        <span
          class="bp3-icon StyledProps--main"
          data-icon="azure-key-vault"
        >
          <svg
            height="37"
            viewBox="0 0 18 18"
            width="37"
            xmlns="http://www.w3.org/2000/svg"
          >
            <defs>
              <radialgradient
                cx="9"
                cy="9"
                gradientUnits="userSpaceOnUse"
                id="azure-key-vault_svg__a"
                r="8.5"
              >
                <stop
                  offset="0.18"
                  stop-color="#5ea0ef"
                />
                <stop
                  offset="0.56"
                  stop-color="#5c9fee"
                />
                <stop
                  offset="0.69"
                  stop-color="#559ced"
                />
                <stop
                  offset="0.78"
                  stop-color="#4a97e9"
                />
                <stop
                  offset="0.86"
                  stop-color="#3990e4"
                />
                <stop
                  offset="0.93"
                  stop-color="#2387de"
                />
                <stop
                  offset="0.99"
                  stop-color="#087bd6"
                />
                <stop
                  offset="1"
                  stop-color="#0078d4"
                />
              </radialgradient>
              <radialgradient
                cx="38.95"
                cy="182.07"
                gradientTransform="matrix(.94 0 0 .94 -28.71 -163.24)"
                gradientUnits="userSpaceOnUse"
                id="azure-key-vault_svg__b"
                r="9.88"
              >
                <stop
                  offset="0.27"
                  stop-color="#ffd70f"
                />
                <stop
                  offset="0.49"
                  stop-color="#ffcb12"
                />
                <stop
                  offset="0.88"
                  stop-color="#feac19"
                />
                <stop
                  offset="1"
                  stop-color="#fea11b"
                />
              </radialgradient>
            </defs>
            <path
              d="M9 .5A8.5 8.5 0 1017.5 9 8.51 8.51 0 009 .5zm0 15.84A7.34 7.34 0 1116.34 9 7.34 7.34 0 019 16.34z"
              fill="url(#azure-key-vault_svg__a)"
            />
            <circle
              cx="9"
              cy="9"
              fill="#fff"
              r="7.34"
            />
            <path
              d="M13.44 7.33a1.84 1.84 0 000-2.59l-3.15-3.16a1.83 1.83 0 00-2.58 0L4.56 4.74a1.84 1.84 0 000 2.59L7.18 10a.51.51 0 01.15.36v4.88a.63.63 0 00.18.44l1.2 1.2a.41.41 0 00.58 0l1.16-1.16.68-.68a.25.25 0 000-.34l-.49-.49a.27.27 0 010-.37l.49-.49a.25.25 0 000-.34l-.49-.49a.27.27 0 010-.37l.49-.49a.25.25 0 000-.34l-.68-.69v-.25zM9 2.35a1 1 0 010 2.07 1 1 0 110-2.07z"
              fill="url(#azure-key-vault_svg__b)"
            />
            <path
              d="M8.18 15.3a.23.23 0 00.38-.17v-4a.24.24 0 00-.11-.2.22.22 0 00-.34.2v4a.28.28 0 00.07.17z"
              fill="#ff9300"
              opacity="0.75"
            />
            <rect
              fill="#ff9300"
              height="0.61"
              opacity="0.75"
              rx="0.28"
              width="5.17"
              x="6.48"
              y="5.79"
            />
            <rect
              fill="#ff9300"
              height="0.61"
              opacity="0.75"
              rx="0.28"
              width="5.17"
              x="6.48"
              y="6.78"
            />
          </svg>
        </span>
      </span>
      <span
        class="StepWizard--title StepWizard--header"
      >
        connectors.title.azureKeyVault
      </span>
      <div
        class="StepWizard--navStep StepWizard--completedStep"
      >
        <span
          class="StepWizard--completedIcon"
        >
          <span
            class="bp3-icon bp3-icon-small-tick StyledProps--main StyledProps--color StyledProps--color-grey200"
            icon="small-tick"
          >
            <svg
              data-icon="small-tick"
              height="20"
              viewBox="0 0 20 20"
              width="20"
            >
              <desc>
                small-tick
              </desc>
              <path
                d="M15 5c-.28 0-.53.11-.71.29L8 11.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29s.53-.11.71-.29l7-7A1.003 1.003 0 0015 5z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          overview
        </p>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          
        </p>
      </div>
      <div
        class="StepWizard--navStep StepWizard--activeStep"
      >
        <span
          class="StepWizard--number"
        >
          2
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          details
        </p>
      </div>
      <div
        class="StepWizard--navStep"
      >
        <span
          class="StepWizard--number"
        >
          3
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          connectors.stepThreeName
        </p>
      </div>
    </div>
    <div
      class="StepWizard--stepDetails"
    >
       
      <div
        class="StyledProps--font StyledProps--main StyledProps--padding-top-medium"
        style="width: 64%;"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-size-medium StyledProps--padding-bottom-xlarge"
        >
          details
        </p>
        <div
          class="StyledProps--font StyledProps--main StyledProps--background-red200 StyledProps--padding-medium StyledProps--flex StyledProps--border StyledProps--border-color-red300 StyledProps--border-bottom"
          style="padding: 10px 20px;"
        >
          <div
            class="StyledProps--font StyledProps--main StyledProps--flex"
            style="justify-content: flex-start;"
          >
            <span
              class="bp3-icon bp3-icon-warning-sign StyledProps--main StyledProps--color StyledProps--color-red500 StyledProps--margin-right-xsmall"
              icon="warning-sign"
            >
              <svg
                data-icon="warning-sign"
                height="24"
                viewBox="0 0 20 20"
                width="24"
              >
                <desc>
                  warning-sign
                </desc>
                <path
                  d="M19.86 17.52l.01-.01-9-16-.01.01C10.69 1.21 10.37 1 10 1s-.69.21-.86.52l-.01-.01-9 16 .01.01c-.08.14-.14.3-.14.48 0 .55.45 1 1 1h18c.55 0 1-.45 1-1 0-.18-.06-.34-.14-.48zM11 17H9v-2h2v2zm0-3H9V6h2v8z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
            <div
              class="StyledProps--font StyledProps--main StyledProps--padding-small"
            >
              <p
                class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--font-weight-bold StyledProps--color StyledProps--color-red500"
                data-type="single-message"
                style="overflow-wrap: break-word; word-wrap: break-word; hyphens: auto; --text-line-clamp: 5;"
              >
                Request is not defined
              </p>
            </div>
          </div>
        </div>
        <div
          class="OverlaySpinner--overlaySpinner"
        >
          <form
            class="FormikForm--main"
          >
            <div>
              <div
                class="StyledProps--font StyledProps--main formHeight StyledProps--margin-top-medium StyledProps--margin-bottom-xxlarge"
              >
                <div
                  class="bp3-form-group"
                  data-id="clientId-0"
                >
                  <label
                    class="bp3-label"
                    for="clientId"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="azureKeyVaultForm_clientId"
                    >
                      common.clientId
                    </span>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-input-group"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        name="clientId"
                        type="text"
                        value="dummy clientId"
                      />
                    </div>
                  </div>
                </div>
                <div
                  class="bp3-form-group"
                  data-id="tenantId-1"
                >
                  <label
                    class="bp3-label"
                    for="tenantId"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="azureKeyVaultForm_tenantId"
                    >
                      connectors.azureKeyVault.labels.tenantId
                    </span>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-input-group"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        name="tenantId"
                        type="text"
                        value="dummy tenantId"
                      />
                    </div>
                  </div>
                </div>
                <div
                  class="bp3-form-group"
                  data-id="subscription-2"
                >
                  <label
                    class="bp3-label"
                    for="subscription"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="azureKeyVaultForm_subscription"
                    >
                      connectors.azureKeyVault.labels.subscription
                    </span>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-input-group"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        name="subscription"
                        type="text"
                        value="dummy subscription"
                      />
                    </div>
                  </div>
                </div>
                <div
                  class="bp3-form-group"
                  data-id="null-3"
                >
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="Layout--vertical StyledProps--main"
                    >
                      <label
                        class="bp3-label"
                      >
                        keyLabel
                      </label>
                      <div
                        class="StyledProps--font StyledProps--main container StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-space-between"
                      >
                        <a
                          class="containerLink"
                          data-testid="secretKey"
                          href="/account/dummy/resources/connectors"
                        >
                          <span
                            class="bp3-icon StyledProps--main"
                            data-icon="key-main"
                            style="height: 12px;"
                          >
                            <svg
                              height="24"
                              width="24"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <g
                                fill="none"
                                stroke="#1C1C28"
                                stroke-width="0.5"
                              >
                                <path
                                  d="M5.444 1A4.45 4.45 0 001 5.444c0 2.459 1.994 4.46 4.444 4.46 1.939 0 3.613-1.542 4.202-2.995a.393.393 0 01.23-.223.39.39 0 01.322.015l1.032.507.757-.72a.402.402 0 01.552-.007l.543.493.547-.556a.404.404 0 01.572-.005l.527.516.528-.53a.406.406 0 01.571-.002l.522.522.524-.523a.406.406 0 01.571 0l.522.522.523-.522a.414.414 0 01.315-.118.41.41 0 01.294.16l.277.369c.116-.153.234-.311.312-.396a.412.412 0 01.3-.134c.693 0 .927-.37.927-1.465 0-1.018-.636-1.381-1.23-1.381H9.638a.408.408 0 01-.35-.202A4.448 4.448 0 005.444 1h0z"
                                />
                                <path
                                  d="M3.828 3.99c.403 0 .769.163 1.034.428a1.458 1.458 0 010 2.067 1.458 1.458 0 01-2.067 0 1.458 1.458 0 010-2.067c.265-.265.63-.428 1.033-.428z"
                                />
                              </g>
                            </svg>
                          </span>
                          <p
                            class="StyledProps--font StyledProps--main containerLinkText StyledProps--color StyledProps--color-blue500 StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-flex-start StyledProps--flex-inline StyledProps--padding-small"
                          >
                            <div>
                              secret.configureSecret
                            </div>
                            <div>
                              &lt;mockSecret&gt;
                            </div>
                          </p>
                        </a>
                        <button
                          class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main containerEditBtn Button--with-current-color Button--without-shadow"
                          data-testid="secretKey-edit"
                          type="button"
                        >
                          <span
                            class="bp3-button-text"
                          >
                            <span
                              class="bp3-icon bp3-icon-edit StyledProps--main StyledProps--color StyledProps--color-blue500"
                              icon="edit"
                            >
                              <svg
                                data-icon="edit"
                                height="16"
                                viewBox="0 0 16 16"
                                width="16"
                              >
                                <desc>
                                  edit
                                </desc>
                                <path
                                  d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                                  fill-rule="evenodd"
                                />
                              </svg>
                            </span>
                          </span>
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-flex-start"
                >
                  <div
                    class="bp3-form-group bp3-disabled"
                    data-id="vaultName-4"
                  >
                    <label
                      class="bp3-label"
                      for="vaultName"
                    >
                      <span
                        class="Tooltip--acenter"
                        data-tooltip-id="azureKeyVaultForm_vaultName"
                      >
                        connectors.azureKeyVault.labels.vaultName
                      </span>
                       
                      <span
                        class="bp3-text-muted"
                      />
                    </label>
                    <div
                      class="bp3-form-content"
                    >
                      <div
                        class="bp3-popover-wrapper Select--main bp3-fill"
                      >
                        <div
                          class="bp3-popover-target"
                        >
                          <div
                            class="bp3-input-group bp3-disabled"
                          >
                            <input
                              autocomplete="off"
                              class="bp3-input"
                              disabled=""
                              name="vaultName"
                              placeholder="Search..."
                              style="padding-right: 0px;"
                              type="text"
                              value=""
                            />
                            <span
                              class="bp3-input-action"
                            >
                              <span
                                class="bp3-icon bp3-icon-caret-down StyledProps--main StyledProps--padding-small"
                                icon="caret-down"
                              >
                                <svg
                                  data-icon="caret-down"
                                  height="14"
                                  viewBox="0 0 16 16"
                                  width="14"
                                >
                                  <desc>
                                    caret-down
                                  </desc>
                                  <path
                                    d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                                    fill-rule="evenodd"
                                  />
                                </svg>
                              </span>
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <button
                    class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--margin-top-xsmall StyledProps--intent-primary Button--with-current-color"
                    type="button"
                  >
                    <span
                      class="bp3-button-text"
                    >
                      connectors.azureKeyVault.labels.fetchVault
                    </span>
                  </button>
                </div>
                <div
                  class="bp3-form-group"
                  data-id="default-5"
                >
                  <div
                    class="bp3-form-content"
                  >
                    <label
                      class="bp3-control bp3-checkbox StyledProps--font Checkbox--checkbox StyledProps--main StyledProps--padding-left-xxlarge StyledProps--inline"
                    >
                      <input
                        name="default"
                        type="checkbox"
                      />
                      <span
                        class="bp3-control-indicator"
                      />
                      <span
                        class="Tooltip--acenter FormikForm--checkBoxDocTooltipLabel"
                        data-tooltip-id="azureKeyVaultForm_default"
                      >
                        connectors.hashiCorpVault.defaultVault
                      </span>
                    </label>
                  </div>
                </div>
              </div>
              <div
                class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main"
              >
                <button
                  class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color"
                  type="button"
                >
                  <span
                    class="bp3-button-text"
                  >
                    back
                  </span>
                </button>
                <button
                  class="bp3-button bp3-disabled Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color"
                  disabled=""
                  tabindex="-1"
                  type="submit"
                >
                  <span
                    class="bp3-button-text"
                  >
                    saveAndContinue
                  </span>
                  <span
                    class="bp3-icon bp3-icon-chevron-right StyledProps--main"
                    icon="chevron-right"
                  >
                    <svg
                      data-icon="chevron-right"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <desc>
                        chevron-right
                      </desc>
                      <path
                        d="M10.71 7.29l-4-4a1.003 1.003 0 00-1.42 1.42L8.59 8 5.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Create Secret Manager Wizard should render form in edit 1`] = `
<div>
  <div
    class="StepWizard--main wizardNav StepWizard--navBar"
  >
    <div
      class="StepWizard--navBarList"
    >
      <span
        class="StepWizard--header"
      >
        <span
          class="bp3-icon StyledProps--main"
          data-icon="azure-key-vault"
        >
          <svg
            height="37"
            viewBox="0 0 18 18"
            width="37"
            xmlns="http://www.w3.org/2000/svg"
          >
            <defs>
              <radialgradient
                cx="9"
                cy="9"
                gradientUnits="userSpaceOnUse"
                id="azure-key-vault_svg__a"
                r="8.5"
              >
                <stop
                  offset="0.18"
                  stop-color="#5ea0ef"
                />
                <stop
                  offset="0.56"
                  stop-color="#5c9fee"
                />
                <stop
                  offset="0.69"
                  stop-color="#559ced"
                />
                <stop
                  offset="0.78"
                  stop-color="#4a97e9"
                />
                <stop
                  offset="0.86"
                  stop-color="#3990e4"
                />
                <stop
                  offset="0.93"
                  stop-color="#2387de"
                />
                <stop
                  offset="0.99"
                  stop-color="#087bd6"
                />
                <stop
                  offset="1"
                  stop-color="#0078d4"
                />
              </radialgradient>
              <radialgradient
                cx="38.95"
                cy="182.07"
                gradientTransform="matrix(.94 0 0 .94 -28.71 -163.24)"
                gradientUnits="userSpaceOnUse"
                id="azure-key-vault_svg__b"
                r="9.88"
              >
                <stop
                  offset="0.27"
                  stop-color="#ffd70f"
                />
                <stop
                  offset="0.49"
                  stop-color="#ffcb12"
                />
                <stop
                  offset="0.88"
                  stop-color="#feac19"
                />
                <stop
                  offset="1"
                  stop-color="#fea11b"
                />
              </radialgradient>
            </defs>
            <path
              d="M9 .5A8.5 8.5 0 1017.5 9 8.51 8.51 0 009 .5zm0 15.84A7.34 7.34 0 1116.34 9 7.34 7.34 0 019 16.34z"
              fill="url(#azure-key-vault_svg__a)"
            />
            <circle
              cx="9"
              cy="9"
              fill="#fff"
              r="7.34"
            />
            <path
              d="M13.44 7.33a1.84 1.84 0 000-2.59l-3.15-3.16a1.83 1.83 0 00-2.58 0L4.56 4.74a1.84 1.84 0 000 2.59L7.18 10a.51.51 0 01.15.36v4.88a.63.63 0 00.18.44l1.2 1.2a.41.41 0 00.58 0l1.16-1.16.68-.68a.25.25 0 000-.34l-.49-.49a.27.27 0 010-.37l.49-.49a.25.25 0 000-.34l-.49-.49a.27.27 0 010-.37l.49-.49a.25.25 0 000-.34l-.68-.69v-.25zM9 2.35a1 1 0 010 2.07 1 1 0 110-2.07z"
              fill="url(#azure-key-vault_svg__b)"
            />
            <path
              d="M8.18 15.3a.23.23 0 00.38-.17v-4a.24.24 0 00-.11-.2.22.22 0 00-.34.2v4a.28.28 0 00.07.17z"
              fill="#ff9300"
              opacity="0.75"
            />
            <rect
              fill="#ff9300"
              height="0.61"
              opacity="0.75"
              rx="0.28"
              width="5.17"
              x="6.48"
              y="5.79"
            />
            <rect
              fill="#ff9300"
              height="0.61"
              opacity="0.75"
              rx="0.28"
              width="5.17"
              x="6.48"
              y="6.78"
            />
          </svg>
        </span>
      </span>
      <span
        class="StepWizard--title StepWizard--header"
      >
        connectors.title.azureKeyVault
      </span>
      <div
        class="StepWizard--navStep StepWizard--activeStep"
      >
        <span
          class="StepWizard--number"
        >
          1
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          overview
        </p>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          
        </p>
      </div>
      <div
        class="StepWizard--navStep"
      >
        <span
          class="StepWizard--number"
        >
          2
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          details
        </p>
      </div>
      <div
        class="StepWizard--navStep"
      >
        <span
          class="StepWizard--number"
        >
          3
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          connectors.stepThreeName
        </p>
      </div>
    </div>
    <div
      class="StepWizard--stepDetails"
    >
       
      <div
        class="Layout--vertical Layout--layout-spacing-xxlarge StyledProps--main firstep"
      >
        <div
          class="heading"
        >
          overview
        </div>
        <div
          class="StyledProps--font StyledProps--main connectorForm StyledProps--padding-small"
        >
          <div
            class="OverlaySpinner--overlaySpinner"
          >
            <form
              class="FormikForm--main"
            >
              <div>
                <div
                  class="StyledProps--font StyledProps--main"
                  style="min-height: 460px;"
                >
                  <div
                    class="StyledProps--font StyledProps--main main formElm"
                  >
                    <div
                      class="InputWithIdentifier--txtNameContainer TextInput--main"
                    >
                      <div
                        class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
                      >
                        <p
                          class="StyledProps--font StyledProps--main"
                        >
                          ID
                          :
                        </p>
                        <span
                          class="bp3-popover-wrapper"
                        >
                          <span
                            class="bp3-popover-target"
                          >
                            <div
                              class="bp3-editable-text bp3-disabled InputWithIdentifier--idValue"
                            >
                              <span
                                class="bp3-editable-text-content"
                                style="height: 1px; line-height: 1px; min-width: 0;"
                              >
                                dummy connector identifier
                              </span>
                            </div>
                          </span>
                        </span>
                      </div>
                      <div
                        class="bp3-form-group"
                        data-id="name-0"
                      >
                        <label
                          class="bp3-label"
                          for="name"
                        >
                          <span
                            class="Tooltip--acenter"
                            data-tooltip-id="connectorDetailsStepForm_name"
                          >
                            name
                          </span>
                           
                          <span
                            class="bp3-text-muted"
                          />
                        </label>
                        <div
                          class="bp3-form-content"
                        >
                          <div
                            class="bp3-input-group"
                          >
                            <input
                              autocomplete="off"
                              class="bp3-input"
                              name="name"
                              placeholder="common.namePlaceholder"
                              type="text"
                              value="dummy connector name"
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="StyledProps--font StyledProps--main"
                      style="margin-bottom: 0px;"
                    >
                      <label
                        class="Label--main"
                        style="font-size: 13px; font-weight: normal;"
                      >
                        optionalField
                      </label>
                      <div
                        class="bp3-form-group"
                        data-id="description-1"
                      >
                        <div
                          class="bp3-form-content"
                        >
                          <textarea
                            autocomplete="off"
                            class="bp3-input bp3-fill"
                            maxlength="1024"
                            name="description"
                            placeholder="common.descriptionPlaceholder"
                          >
                            dummy connector desc
                          </textarea>
                        </div>
                      </div>
                    </div>
                    <div
                      class="StyledProps--font StyledProps--main"
                    >
                      <label
                        class="Label--main"
                        style="font-size: 13px; font-weight: normal;"
                      >
                        optionalField
                        <span
                          class="bp3-icon bp3-icon-edit StyledProps--main editOpen StyledProps--color StyledProps--color-grey500"
                          data-name="edit"
                          data-testid="tags-edit"
                          icon="edit"
                        >
                          <svg
                            data-icon="edit"
                            height="12"
                            viewBox="0 0 16 16"
                            width="12"
                          >
                            <desc>
                              edit
                            </desc>
                            <path
                              d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </label>
                    </div>
                  </div>
                </div>
                <div
                  class="Layout--horizontal StyledProps--main"
                >
                  <button
                    class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color"
                    type="submit"
                  >
                    <span
                      class="bp3-button-text"
                    >
                      <span>
                        continue
                      </span>
                    </span>
                    <span
                      class="bp3-icon bp3-icon-chevron-right StyledProps--main"
                      icon="chevron-right"
                    >
                      <svg
                        data-icon="chevron-right"
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <desc>
                          chevron-right
                        </desc>
                        <path
                          d="M10.71 7.29l-4-4a1.003 1.003 0 00-1.42 1.42L8.59 8 5.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                </div>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Create Secret Manager Wizard should render form in edit 2`] = `
<div>
  <div
    class="StepWizard--main wizardNav StepWizard--navBar"
  >
    <div
      class="StepWizard--navBarList"
    >
      <span
        class="StepWizard--header"
      >
        <span
          class="bp3-icon StyledProps--main"
          data-icon="azure-key-vault"
        >
          <svg
            height="37"
            viewBox="0 0 18 18"
            width="37"
            xmlns="http://www.w3.org/2000/svg"
          >
            <defs>
              <radialgradient
                cx="9"
                cy="9"
                gradientUnits="userSpaceOnUse"
                id="azure-key-vault_svg__a"
                r="8.5"
              >
                <stop
                  offset="0.18"
                  stop-color="#5ea0ef"
                />
                <stop
                  offset="0.56"
                  stop-color="#5c9fee"
                />
                <stop
                  offset="0.69"
                  stop-color="#559ced"
                />
                <stop
                  offset="0.78"
                  stop-color="#4a97e9"
                />
                <stop
                  offset="0.86"
                  stop-color="#3990e4"
                />
                <stop
                  offset="0.93"
                  stop-color="#2387de"
                />
                <stop
                  offset="0.99"
                  stop-color="#087bd6"
                />
                <stop
                  offset="1"
                  stop-color="#0078d4"
                />
              </radialgradient>
              <radialgradient
                cx="38.95"
                cy="182.07"
                gradientTransform="matrix(.94 0 0 .94 -28.71 -163.24)"
                gradientUnits="userSpaceOnUse"
                id="azure-key-vault_svg__b"
                r="9.88"
              >
                <stop
                  offset="0.27"
                  stop-color="#ffd70f"
                />
                <stop
                  offset="0.49"
                  stop-color="#ffcb12"
                />
                <stop
                  offset="0.88"
                  stop-color="#feac19"
                />
                <stop
                  offset="1"
                  stop-color="#fea11b"
                />
              </radialgradient>
            </defs>
            <path
              d="M9 .5A8.5 8.5 0 1017.5 9 8.51 8.51 0 009 .5zm0 15.84A7.34 7.34 0 1116.34 9 7.34 7.34 0 019 16.34z"
              fill="url(#azure-key-vault_svg__a)"
            />
            <circle
              cx="9"
              cy="9"
              fill="#fff"
              r="7.34"
            />
            <path
              d="M13.44 7.33a1.84 1.84 0 000-2.59l-3.15-3.16a1.83 1.83 0 00-2.58 0L4.56 4.74a1.84 1.84 0 000 2.59L7.18 10a.51.51 0 01.15.36v4.88a.63.63 0 00.18.44l1.2 1.2a.41.41 0 00.58 0l1.16-1.16.68-.68a.25.25 0 000-.34l-.49-.49a.27.27 0 010-.37l.49-.49a.25.25 0 000-.34l-.49-.49a.27.27 0 010-.37l.49-.49a.25.25 0 000-.34l-.68-.69v-.25zM9 2.35a1 1 0 010 2.07 1 1 0 110-2.07z"
              fill="url(#azure-key-vault_svg__b)"
            />
            <path
              d="M8.18 15.3a.23.23 0 00.38-.17v-4a.24.24 0 00-.11-.2.22.22 0 00-.34.2v4a.28.28 0 00.07.17z"
              fill="#ff9300"
              opacity="0.75"
            />
            <rect
              fill="#ff9300"
              height="0.61"
              opacity="0.75"
              rx="0.28"
              width="5.17"
              x="6.48"
              y="5.79"
            />
            <rect
              fill="#ff9300"
              height="0.61"
              opacity="0.75"
              rx="0.28"
              width="5.17"
              x="6.48"
              y="6.78"
            />
          </svg>
        </span>
      </span>
      <span
        class="StepWizard--title StepWizard--header"
      >
        connectors.title.azureKeyVault
      </span>
      <div
        class="StepWizard--navStep StepWizard--activeStep"
      >
        <span
          class="StepWizard--number"
        >
          1
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          overview
        </p>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          
        </p>
      </div>
      <div
        class="StepWizard--navStep"
      >
        <span
          class="StepWizard--number"
        >
          2
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          details
        </p>
      </div>
      <div
        class="StepWizard--navStep"
      >
        <span
          class="StepWizard--number"
        >
          3
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          connectors.stepThreeName
        </p>
      </div>
    </div>
    <div
      class="StepWizard--stepDetails"
    >
       
      <div
        class="Layout--vertical Layout--layout-spacing-xxlarge StyledProps--main firstep"
      >
        <div
          class="heading"
        >
          overview
        </div>
        <div
          class="StyledProps--font StyledProps--main connectorForm StyledProps--padding-small"
        >
          <div
            class="OverlaySpinner--overlaySpinner"
          >
            <form
              class="FormikForm--main"
            >
              <div>
                <div
                  class="StyledProps--font StyledProps--main"
                  style="min-height: 460px;"
                >
                  <div
                    class="StyledProps--font StyledProps--main main formElm"
                  >
                    <div
                      class="InputWithIdentifier--txtNameContainer TextInput--main"
                    >
                      <div
                        class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
                      >
                        <p
                          class="StyledProps--font StyledProps--main"
                        >
                          ID
                          :
                        </p>
                        <span
                          class="bp3-popover-wrapper"
                        >
                          <span
                            class="bp3-popover-target"
                          >
                            <div
                              class="bp3-editable-text bp3-disabled InputWithIdentifier--idValue"
                            >
                              <span
                                class="bp3-editable-text-content"
                                style="height: 1px; line-height: 1px; min-width: 0;"
                              >
                                dummy connector identifier
                              </span>
                            </div>
                          </span>
                        </span>
                      </div>
                      <div
                        class="bp3-form-group"
                        data-id="name-0"
                      >
                        <label
                          class="bp3-label"
                          for="name"
                        >
                          <span
                            class="Tooltip--acenter"
                            data-tooltip-id="connectorDetailsStepForm_name"
                          >
                            name
                          </span>
                           
                          <span
                            class="bp3-text-muted"
                          />
                        </label>
                        <div
                          class="bp3-form-content"
                        >
                          <div
                            class="bp3-input-group"
                          >
                            <input
                              autocomplete="off"
                              class="bp3-input"
                              name="name"
                              placeholder="common.namePlaceholder"
                              type="text"
                              value="dummy connector name"
                            />
                          </div>
                        </div>
                      </div>
                      <p
                        class="StyledProps--font StyledProps--main StyledProps--font-small StyledProps--intent-danger StyledProps--padding-bottom-medium"
                      >
                        validation.validIdRegex
                      </p>
                    </div>
                    <div
                      class="StyledProps--font StyledProps--main"
                      style="margin-bottom: 0px;"
                    >
                      <label
                        class="Label--main"
                        style="font-size: 13px; font-weight: normal;"
                      >
                        optionalField
                      </label>
                      <div
                        class="bp3-form-group"
                        data-id="description-1"
                      >
                        <div
                          class="bp3-form-content"
                        >
                          <textarea
                            autocomplete="off"
                            class="bp3-input bp3-fill"
                            maxlength="1024"
                            name="description"
                            placeholder="common.descriptionPlaceholder"
                          >
                            dummy connector desc
                          </textarea>
                        </div>
                      </div>
                    </div>
                    <div
                      class="StyledProps--font StyledProps--main"
                    >
                      <label
                        class="Label--main"
                        style="font-size: 13px; font-weight: normal;"
                      >
                        optionalField
                        <span
                          class="bp3-icon bp3-icon-edit StyledProps--main editOpen StyledProps--color StyledProps--color-grey500"
                          data-name="edit"
                          data-testid="tags-edit"
                          icon="edit"
                        >
                          <svg
                            data-icon="edit"
                            height="12"
                            viewBox="0 0 16 16"
                            width="12"
                          >
                            <desc>
                              edit
                            </desc>
                            <path
                              d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </label>
                    </div>
                  </div>
                </div>
                <div
                  class="Layout--horizontal StyledProps--main"
                >
                  <button
                    class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color"
                    type="submit"
                  >
                    <span
                      class="bp3-button-text"
                    >
                      <span>
                        continue
                      </span>
                    </span>
                    <span
                      class="bp3-icon bp3-icon-chevron-right StyledProps--main"
                      icon="chevron-right"
                    >
                      <svg
                        data-icon="chevron-right"
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <desc>
                          chevron-right
                        </desc>
                        <path
                          d="M10.71 7.29l-4-4a1.003 1.003 0 00-1.42 1.42L8.59 8 5.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                </div>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Create Secret Manager Wizard should render form in edit 3`] = `
<div>
  <div
    class="StepWizard--main wizardNav StepWizard--navBar"
  >
    <div
      class="StepWizard--navBarList"
    >
      <span
        class="StepWizard--header"
      >
        <span
          class="bp3-icon StyledProps--main"
          data-icon="azure-key-vault"
        >
          <svg
            height="37"
            viewBox="0 0 18 18"
            width="37"
            xmlns="http://www.w3.org/2000/svg"
          >
            <defs>
              <radialgradient
                cx="9"
                cy="9"
                gradientUnits="userSpaceOnUse"
                id="azure-key-vault_svg__a"
                r="8.5"
              >
                <stop
                  offset="0.18"
                  stop-color="#5ea0ef"
                />
                <stop
                  offset="0.56"
                  stop-color="#5c9fee"
                />
                <stop
                  offset="0.69"
                  stop-color="#559ced"
                />
                <stop
                  offset="0.78"
                  stop-color="#4a97e9"
                />
                <stop
                  offset="0.86"
                  stop-color="#3990e4"
                />
                <stop
                  offset="0.93"
                  stop-color="#2387de"
                />
                <stop
                  offset="0.99"
                  stop-color="#087bd6"
                />
                <stop
                  offset="1"
                  stop-color="#0078d4"
                />
              </radialgradient>
              <radialgradient
                cx="38.95"
                cy="182.07"
                gradientTransform="matrix(.94 0 0 .94 -28.71 -163.24)"
                gradientUnits="userSpaceOnUse"
                id="azure-key-vault_svg__b"
                r="9.88"
              >
                <stop
                  offset="0.27"
                  stop-color="#ffd70f"
                />
                <stop
                  offset="0.49"
                  stop-color="#ffcb12"
                />
                <stop
                  offset="0.88"
                  stop-color="#feac19"
                />
                <stop
                  offset="1"
                  stop-color="#fea11b"
                />
              </radialgradient>
            </defs>
            <path
              d="M9 .5A8.5 8.5 0 1017.5 9 8.51 8.51 0 009 .5zm0 15.84A7.34 7.34 0 1116.34 9 7.34 7.34 0 019 16.34z"
              fill="url(#azure-key-vault_svg__a)"
            />
            <circle
              cx="9"
              cy="9"
              fill="#fff"
              r="7.34"
            />
            <path
              d="M13.44 7.33a1.84 1.84 0 000-2.59l-3.15-3.16a1.83 1.83 0 00-2.58 0L4.56 4.74a1.84 1.84 0 000 2.59L7.18 10a.51.51 0 01.15.36v4.88a.63.63 0 00.18.44l1.2 1.2a.41.41 0 00.58 0l1.16-1.16.68-.68a.25.25 0 000-.34l-.49-.49a.27.27 0 010-.37l.49-.49a.25.25 0 000-.34l-.49-.49a.27.27 0 010-.37l.49-.49a.25.25 0 000-.34l-.68-.69v-.25zM9 2.35a1 1 0 010 2.07 1 1 0 110-2.07z"
              fill="url(#azure-key-vault_svg__b)"
            />
            <path
              d="M8.18 15.3a.23.23 0 00.38-.17v-4a.24.24 0 00-.11-.2.22.22 0 00-.34.2v4a.28.28 0 00.07.17z"
              fill="#ff9300"
              opacity="0.75"
            />
            <rect
              fill="#ff9300"
              height="0.61"
              opacity="0.75"
              rx="0.28"
              width="5.17"
              x="6.48"
              y="5.79"
            />
            <rect
              fill="#ff9300"
              height="0.61"
              opacity="0.75"
              rx="0.28"
              width="5.17"
              x="6.48"
              y="6.78"
            />
          </svg>
        </span>
      </span>
      <span
        class="StepWizard--title StepWizard--header"
      >
        connectors.title.azureKeyVault
      </span>
      <div
        class="StepWizard--navStep StepWizard--activeStep"
      >
        <span
          class="StepWizard--number"
        >
          1
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          overview
        </p>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          
        </p>
      </div>
      <div
        class="StepWizard--navStep"
      >
        <span
          class="StepWizard--number"
        >
          2
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          details
        </p>
      </div>
      <div
        class="StepWizard--navStep"
      >
        <span
          class="StepWizard--number"
        >
          3
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          connectors.stepThreeName
        </p>
      </div>
    </div>
    <div
      class="StepWizard--stepDetails"
    >
       
      <div
        class="Layout--vertical Layout--layout-spacing-xxlarge StyledProps--main firstep"
      >
        <div
          class="heading"
        >
          overview
        </div>
        <div
          class="StyledProps--font StyledProps--main connectorForm StyledProps--padding-small"
        >
          <div
            class="OverlaySpinner--overlaySpinner"
          >
            <form
              class="FormikForm--main"
            >
              <div>
                <div
                  class="StyledProps--font StyledProps--main"
                  style="min-height: 460px;"
                >
                  <div
                    class="StyledProps--font StyledProps--main main formElm"
                  >
                    <div
                      class="InputWithIdentifier--txtNameContainer TextInput--main"
                    >
                      <div
                        class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
                      >
                        <p
                          class="StyledProps--font StyledProps--main"
                        >
                          ID
                          :
                        </p>
                        <span
                          class="bp3-popover-wrapper"
                        >
                          <span
                            class="bp3-popover-target"
                          >
                            <div
                              class="bp3-editable-text bp3-disabled InputWithIdentifier--idValue"
                            >
                              <span
                                class="bp3-editable-text-content"
                                style="height: 1px; line-height: 1px; min-width: 0;"
                              >
                                dummy connector identifier
                              </span>
                            </div>
                          </span>
                        </span>
                      </div>
                      <div
                        class="bp3-form-group"
                        data-id="name-0"
                      >
                        <label
                          class="bp3-label"
                          for="name"
                        >
                          <span
                            class="Tooltip--acenter"
                            data-tooltip-id="connectorDetailsStepForm_name"
                          >
                            name
                          </span>
                           
                          <span
                            class="bp3-text-muted"
                          />
                        </label>
                        <div
                          class="bp3-form-content"
                        >
                          <div
                            class="bp3-input-group"
                          >
                            <input
                              autocomplete="off"
                              class="bp3-input"
                              name="name"
                              placeholder="common.namePlaceholder"
                              type="text"
                              value="dummy connector name"
                            />
                          </div>
                        </div>
                      </div>
                      <p
                        class="StyledProps--font StyledProps--main StyledProps--font-small StyledProps--intent-danger StyledProps--padding-bottom-medium"
                      >
                        validation.validIdRegex
                      </p>
                    </div>
                    <div
                      class="StyledProps--font StyledProps--main"
                      style="margin-bottom: 0px;"
                    >
                      <label
                        class="Label--main"
                        style="font-size: 13px; font-weight: normal;"
                      >
                        optionalField
                      </label>
                      <div
                        class="bp3-form-group"
                        data-id="description-1"
                      >
                        <div
                          class="bp3-form-content"
                        >
                          <textarea
                            autocomplete="off"
                            class="bp3-input bp3-fill"
                            maxlength="1024"
                            name="description"
                            placeholder="common.descriptionPlaceholder"
                          >
                            dummy connector desc
                          </textarea>
                        </div>
                      </div>
                    </div>
                    <div
                      class="StyledProps--font StyledProps--main"
                    >
                      <label
                        class="Label--main"
                        style="font-size: 13px; font-weight: normal;"
                      >
                        optionalField
                        <span
                          class="bp3-icon bp3-icon-edit StyledProps--main editOpen StyledProps--color StyledProps--color-grey500"
                          data-name="edit"
                          data-testid="tags-edit"
                          icon="edit"
                        >
                          <svg
                            data-icon="edit"
                            height="12"
                            viewBox="0 0 16 16"
                            width="12"
                          >
                            <desc>
                              edit
                            </desc>
                            <path
                              d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </label>
                    </div>
                  </div>
                </div>
                <div
                  class="Layout--horizontal StyledProps--main"
                >
                  <button
                    class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color"
                    type="submit"
                  >
                    <span
                      class="bp3-button-text"
                    >
                      <span>
                        continue
                      </span>
                    </span>
                    <span
                      class="bp3-icon bp3-icon-chevron-right StyledProps--main"
                      icon="chevron-right"
                    >
                      <svg
                        data-icon="chevron-right"
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <desc>
                          chevron-right
                        </desc>
                        <path
                          d="M10.71 7.29l-4-4a1.003 1.003 0 00-1.42 1.42L8.59 8 5.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                </div>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
